css/layout.css
/* ... */
.logo{
	position:absolute;
	z-index:10000;
	top:15px;
	-webkit-transition : all 0.3s ease-out;
	-moz-transition : all 0.3s ease-out;
	-o-transition :all 0.3s ease-out;
	transition : all 0.3s ease-out;
}
.logo img{
	width:160px;
	display:block;
	-webkit-transition : all 0.3s ease-out;
	-moz-transition : all 0.3s ease-out;
	-o-transition :all 0.3s ease-out;
	transition : all 0.3s ease-out;
}


.menu-mobile {
    display: none;
	padding-top:50px;
	padding-bottom:40px;
}

.menu-mobile:after {
    content: "\f394";
    font-family: "Ionicons";
    font-size: 30px;
	height:40px;
	line-height:40px;
    padding: 0;
    float: right;
    position: relative;
    top: 0;
	color:#fff;
    -webkit-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.menu-dropdown-icon:before {
    content: "\f489";
    font-family: "Ionicons";
    display: none;
    cursor: pointer;
    float: right;
    padding: 8px 12px;
    background: #212121;
    color: #fff;
	margin-top:5px;
}
.menu-dropdown-icon-sub:before {
    content: "\f489";
    font-family: "Ionicons";
    display: none;
    cursor: pointer;
    float: right;
	top:-2px;
    padding: 6px 10px;
    background: #414141;
    color: #fff;
}

.menu-container{
	position:relative;
	width:100%;
	max-width:1270px;
	margin:0 auto;
	z-index:10;
}
.menu  {
	position:relative;
	width:100%;
}
.menu img {
	width:100%;
	display:block;
}
.menu > ul {
    margin: 0 auto;
    width: auto;
	float:right;
    list-style: none;
    padding: 0;
    /* IF .menu position=relative -> ul = container width, ELSE ul = 100% width */
    box-sizing: border-box;
}

.menu > ul:before,
.menu > ul:after {
    content: "";
    display: table;
}

.menu > ul:after {
    clear: both;
}

.menu > ul > li {
    float: left;
    padding: 0;
    margin: 0;
}

.menu > ul > li a {
    text-decoration: none;
    padding: 50px 18px;
    display: block;
	font-family: 'Open Sans';
	font-weight:700;
	font-size: 11px;
	line-height:18px;
	letter-spacing:2px;
	text-transform:uppercase;
	color:#fff;
	-webkit-transition : all 0.3s ease-out;
	-moz-transition : all 0.3s ease-out;
	-o-transition :all 0.3s ease-out;
	transition : all 0.3s ease-out;
}

.menu > ul > li a.social {
    text-decoration: none;
    padding: 50px 8px;
    display: block;
	font-weight:normal;
	letter-spacing:0;
	color:#fff;
	display: inline-block;
	vertical-align: inherit;
	font: normal normal normal 12px/18px FontAwesome;
	text-rendering: auto;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-transition : all 0.3s ease-out;
	-moz-transition : all 0.3s ease-out;
	-o-transition :all 0.3s ease-out;
	transition : all 0.3s ease-out;
}
.menu > ul > li a.social.first-icon {
    padding-left:50px;
}
.menu > ul > li:hover > ul {
}
.menu > ul > li > ul {
    width: 100%;
    background: #161616;
    padding: 30px 30px;
	padding-bottom:20px;
    position: absolute;
    z-index: -20;
    left: 0;
    margin: 0;
    list-style: none;
    box-sizing: border-box;
    display: block;
	visibility:hidden;
    opacity: 0;
	height:0;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}
.menu > ul > li > ul.active {
    opacity: 1;
    z-index: 99999;
	height:auto;
	visibility:visible;
	height:auto;
}

.menu > ul > li > ul:before,
.menu > ul > li > ul:after {
    content: "";
    display: table;
}

.menu > ul > li > ul:after {
    clear: both;
}

.menu > ul > li > ul > li {
    margin: 0;
    padding-bottom: 0;
    list-style: none;
    width: 25%;
    background: none;
    float: left;
}
.menu > ul > li > ul > li.three-col {
    width: 33.3333333333333%;
}
.menu > ul > li > ul > li.two-col {
    width: 50%;
}
.menu > ul > li > ul > li.full-width-sec{
	width:100%;
}
.menu > ul > li > ul > li.two-thirds-col{
	width:66.666666666666666%;
}

.menu > ul > li > ul > li p {
	padding:0;
    padding-bottom:10px;
	margin-left:10px;
	margin-right:10px;
	color:#fff;
	font-family: 'Open Sans';
	font-weight:500;
	font-size: 12px;
	line-height:18px;
	letter-spacing:2px;
	text-transform:uppercase;
    width: calc(100% - 20px);
    display: block;
    border-bottom: 1px solid rgba(255,255,255,.1);
}
.menu > ul > li > ul > li a img {
	padding-bottom:15px;
    -webkit-transition: all 300ms linear;
    -moz-transition: all 300ms linear;
    -o-transition: all 300ms linear;
    -ms-transition: all 300ms linear;
    transition: all 300ms linear;
}
.menu > ul > li > ul > li a:hover img {
	opacity:.8;
}
.menu > ul > li > ul > li p span {
	vertical-align: super;
	font-size: 9px;
	line-height:9px;
	font-weight:500;
}
.menu > ul > li > ul > li a {
	padding:0;
	margin-left:10px;
	margin-right:10px;
	color:#c5c5c5;
	font-family: 'Open Sans';
	font-weight:500;
	font-size: 10px;
	line-height:18px;
	letter-spacing:2px;
	text-transform:uppercase;
    width: calc(100% - 20px);
    display: block;
}
.menu > ul > li > ul > li a span {
	vertical-align: super;
	font-size: 9px;
	line-height:9px;
	font-weight:500;
}
.menu > ul > li > ul > li a:hover {
	color:#fff;
}

.menu > ul > li > ul > li > ul {
    display: block;
    padding: 0;
    margin: 10px 0 0;
    list-style: none;
    box-sizing: border-box;
}

.menu > ul > li > ul > li > ul:before,
.menu > ul > li > ul > li > ul:after {
    content: "";
    display: table;
}

.menu > ul > li > ul > li > ul:after {
    clear: both;
}

.menu > ul > li > ul > li > ul > li {
    float: left;
    width: 100%;
    padding: 7px 0;
    margin: 0;
}

.menu > ul > li > ul > li > ul > li a {
    border: 0;
}

.menu > ul > li > ul.normal-sub {
    width: 220px;
    left: auto;
    padding: 10px 0;
}
.menu > ul > li > ul.normal-sub p{
    margin-left:30px;
	margin-right:30px;
	margin-top:20px;
	margin-bottom:7px;
	width:calc(100% - 60px);
}
.menu > ul > li > ul.normal-sub li a.subtitled{
    font-size:11px;
	font-weight:600;
    letter-spacing:2px;
}
/* ... */

